force-app/main/default/objects/Diagnostic__c/fields/AI_generated_comments__c.field-meta.xml
<CustomField>
    <fullName>AI_generated_comments__c</fullName>
    <label>AI generated comments</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>