force-app/main/default/objects/Diagnostic__c/fields/Diagnostic__c.field-meta.xml
<CustomField>
    <fullName>Diagnostic__c</fullName>
    <label>Diagnostic</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>