force-app/main/default/objects/Diagnostic__c/fields/Diagnostic_Date__c.field-meta.xml
<CustomField>
    <fullName>Diagnostic_Date__c</fullName>
    <label>Diagnostic Date</label>
    <type>Date</type>
</CustomField>