force-app/main/default/objects/Diagnostic__c/fields/Doctor_Contact__c.field-meta.xml
<CustomField>
    <fullName>Doctor_Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Doctor Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Diagnostics (Doctor Contact)</relationshipLabel>
    <relationshipName>Diagnostics1</relationshipName>
    <type>Lookup</type>
</CustomField>