force-app/main/default/objects/Diagnostic__c/fields/Patient_Description__c.field-meta.xml
<CustomField>
    <fullName>Patient_Description__c</fullName>
    <label>Patient Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>