force-app/main/default/objects/Diagnostic__c/fields/PatientContact__c.field-meta.xml
<CustomField>
    <fullName>PatientContact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Patient Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Diagnostics</relationshipLabel>
    <relationshipName>Diagnostics</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>